# anywidget-vector

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi.yml
examples/: demo.py  fashion-mnist-parallel-coords-3d.py.py  fashion-mnist-parallel-coords-6d.py  test_add_numpy.py  test_projection.py
src/anywidget_vector/: __init__.py  demo.py  traitlets.py  widget.py
src/anywidget_vector/backends/: __init__.py
src/anywidget_vector/backends/chroma/: __init__.py  client.py  converter.py
src/anywidget_vector/backends/grafeo/: __init__.py  browser.js  client.py  converter.py  embed.js
src/anywidget_vector/backends/lancedb/: __init__.py  client.py  converter.py
src/anywidget_vector/backends/pinecone/: __init__.py  client.js  converter.py
src/anywidget_vector/backends/qdrant/: __init__.py  client.js  converter.py
src/anywidget_vector/backends/weaviate/: __init__.py  client.js  converter.py
src/anywidget_vector/static/: icons.js
src/anywidget_vector/ui/: __init__.py  canvas.js  constants.js  properties.js  settings.js  sidebar.js  styles.css  toolbar.js
tests/: test_widget.py
